--- a/app/index.html
+++ b/app/index.html
@@ -33,25 +33,26 @@
 
         <div class="container">
             <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
                 <h3 class="text-muted">{{title}}</h3>
             </div>
 
             <table class="table">
                 <thead>
                     <th>Name</th>
+                    <th>Cost</th>
                 </thead>
                 <tr ng-repeat='item in items'>
                     <td>{{item.name}}</td>
+                    <td>{{item.cost | currency:'q '}}</td>
                 </tr>
             </table>
 
+            {{sent}}
+            \
+            {{nuevo}}
+
             <div class="footer">
-                <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+                <p>Innovaciones Net {{year}}</p>
             </div>
 
         </div>
@@ -61,18 +62,11 @@
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="../bower_components/angular/angular.min.js"></script>
+        <script src="../bower_components/moment/min/moment.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+        
 
         <!-- build:js scripts/plugins.js -->
         <script src="../bower_components/bootstrap/js/affix.js"></script>
@@ -90,6 +84,7 @@
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/lib.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
